[tool.poetry]
name = "telegram_bot"
version = "0.1.0"
description = ""
authors = ["Neykuratick <neykuratick@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
